fixing alignment of Description and PGN boxes when they're wrapped

--- a/src/styles/flashcard.css
+++ b/src/styles/flashcard.css
@@ -28,13 +28,13 @@
     flex-direction: row-reverse;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
     width: 100%;
     height: fit-content;
 }
 
 .middle-line .description-box {
     width: 350px;
-    padding-right: 20px;
     margin-bottom: 10px;
 }
 
@@ -48,6 +48,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
 .middle-line .my_board { 
@@ -61,7 +62,6 @@
 
 .middle-line .pgn-box { 
     width: 330px;
-    margin-left: 20px;
 }
 
 .description-box .descriptionTitle {
